discussion/kv_engine/167498/167498_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49977: Add configuration for auxio and nonio threads

The executor pool also contains a pool of threads for
auxio and nonio tasks. Allow them to be tuned through the
configuration file.

Change-Id: Iacdefbc56c0e2635c821e22f7508d52de0838609

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2021-12-13 15:35:21.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-12-13 15:38:04.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35949/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35949/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42401/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42401/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4135/ : ABORTED

Clang linker error: linker command failed due to signal (use -v to see invocation) ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4135/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4135/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16427/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16427/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15293/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15293/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4193/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4193/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24536/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14492/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/memcached.cc:755:25: error: too many arguments to function call, expected single argument "fn", have 2 arguments [clang-diagnostic-error]
                        nullptr);
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/buckets.h:259:5: note: "forEach" declared here
    void forEach(std::function<bool(Bucket&)> fn);
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/memcached.cc:766:25: error: too many arguments to function call, expected single argument "fn", have 2 arguments [clang-diagnostic-error]
                        nullptr);
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/buckets.h:259:5: note: "forEach" declared here
    void forEach(std::function<bool(Bucket&)> fn);
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14492/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/memcached.cc:755:25:
error: too many arguments to function call, expected single argument "fn", have 2 arguments [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14492/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17196/ : FAILURE

Compile error at [2021-12-13T15:37:32.376Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/ep_engine.cc:7014:34:
error: out-of-line definition of "set_num_reader_threads" does not match any declaration in "EventuallyPersistentEngine"; did you mean "set_num_writer_threads"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17196/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16132/ : FAILURE

Compile error at [2021-12-13T15:37:31.629Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/ep_engine.cc:7014:6:
error: no declaration matches ?void EventuallyPersistentEngine::set_num_reader_threads(ThreadPoolConfig::ThreadCount)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16132/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13322/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
